#
# configure script for vtk source directory
#
AC_INIT(vtkIVWriter.cxx)


if test ! -r targets.make
then
    echo "Copying $srcdir/targets.make to build directory"
    cp $srcdir/targets.make targets.make || exit 1
fi

# option for handling BSD style makefile includes
#
AC_ARG_WITH(mesa,
         [  --with-bsdmake            uses bsd style makefile includes],
         MAKEINCLUDE=".include"
         MAKEQUOTE='"',
         MAKEINCLUDE="include"
         MAKEQUOTE='')
AC_SUBST(MAKEINCLUDE)
AC_SUBST(MAKEQUOTE)

AC_CONFIG_SUBDIRS(tcl java)

dnl Checks for library functions.
AC_OUTPUT(Makefile)

